data/all_generated_tests/raw_wast_tests/br_InfiniteLoops_471.wast
;; 2. **Test Description**: Implement a loop that contains both `br` and `br_if` instructions, with `br_if` being dependent on a condition to exit the loop. The `br` always jumps back to the start. Ensure the condition for `br_if` is met eventually to exit the loop.    **Constraint**: Tests operational correctness of operand handling and control flow.    **Relation to Infinite Loops**: Incorrect operand stack management or control flow can cause `br_if` not to exit the loop, causing an infinite loop.

(assert_invalid
  (module
    (func $loop_with_br_and_br_if (param i32) (result i32)
      (block $outer_block
        (loop $inner_loop (result i32)
          (local.get 0)
          (i32.const 1)
          (i32.sub)
          (local.tee 0)
          (i32.eqz)
          (br_if $outer_block)
          (br $inner_loop)
        )
      )
    )
  )
  "type mismatch"
)